# evm_1

./: CMakeLists.txt  evm_1  task_1.cpp
task_1/: Lab1.docx  task_1.cpp
task_2/: Lab2.docx  task_2.cpp
task_5/: main.asm  my_int.asm  task_5.cpp
